--- a/casi'no limit/acceuil.html
+++ b/casi'no limit/acceuil.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html lang="fr">
-    
+    <head>
+        <title>Titre de la page</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+    </body>
 </html>
