Update acceuil.html with home page content
Added content to the home page including sections for different workout categories and descriptions.

--- a/casi'no limit/acceuil.html
+++ b/casi'no limit/acceuil.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <title>Titre de la page</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
+<html lang="fr"><head>
+		<title>Home</title>
+		<meta charset="utf-8">
+	</head>
+	<body>
+        <h1>Home</h1>
+        <p>Bonjour et bienvenue sur ce wiki qui regroupe les meilleurs exercices de musculation et vous aide à cibler les muscles que vous souhaitez travailler.</p>
+        <p>L'objectif est simple : simplifier la musculation et la rendre accessible à tous.<br>Nous avons soigneusement organisé chaque catégorie et mis toute notre pédagogie dans nos écrits afin de créer les tutoriels les plus pertinents et efficaces possibles.</p>
+        <p>Voici les différentes parties : </p>
+        <table>
+            <tr>
+                <td>Catégorie</td>
+                <td>Description</td>
+            </tr>
+            <tr>
+                <td><a href="cardio.html">Le Cardio</a></td>
+                <td>Retrouvez de quoi travaillé votre cardio ici</td>
+            </tr>
+            <tr>
+                <td><a href="buste.html">Le Buste</a></td>
+                <td>Ciblez les abdominaux ici</td>
+            </tr>
+            <tr>
+                <td><a href="dos.html">Le Dos</a></td>
+                <td>Ciblez le dos ici</td>
+            </tr>
+            <tr>
+                <td><a href="jambes.html">Les Jambes</a></td>
+                <td>Ciblez les jambes ici</td>
+            </tr>
+            <tr>
+                <td><a href="bras.html">Les Bras</a></td>
+                <td>Retrouvez de quoi travaillé votre cardio ici</td>
+            </tr>
+            <tr>
+                <td><a href="epaule.html">Les épaules</a></td>
+                <td>Ciblez les épaules ici</td>
+            </tr>
+        </table>
     </body>
 </html>
