Update title and heading in acceuil.html

--- a/casi'no limit/acceuil.html
+++ b/casi'no limit/acceuil.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr"><head>
-		<title>Home</title>
+		<title>Muski</title>
 		<meta charset="utf-8">
 	</head>
 	<body>
-        <h1>Home</h1>
+        <h1>Bienvenue sur MusKi</h1>
         <p>Bonjour et bienvenue sur ce wiki qui regroupe les meilleurs exercices de musculation et vous aide à cibler les muscles que vous souhaitez travailler.</p>
+        <img src="../images/dbz-goku.gif" />
         <p>L'objectif est simple : simplifier la musculation et la rendre accessible à tous.<br>Nous avons soigneusement organisé chaque catégorie et mis toute notre pédagogie dans nos écrits afin de créer les tutoriels les plus pertinents et efficaces possibles.</p>
         <p>Voici les différentes parties : </p>
         <table>
@@ -36,6 +37,10 @@
             <tr>
                 <td><a href="epaule.html">Les épaules</a></td>
                 <td>Ciblez les épaules ici</td>
+            </tr>
+            <tr>
+                <td><a href="contact.html">Contactez nous</a></td>
+                <td>Pour nous connaître et s'échanger</td>
             </tr>
         </table>
     </body>
