--- a/casi'no limit/acceuil.html
+++ b/casi'no limit/acceuil.html
@@ -6,7 +6,7 @@
 	<body>
         <h1>Bienvenue sur MusKi</h1>
         <p>Bonjour et bienvenue sur ce wiki qui regroupe les meilleurs exercices de musculation et vous aide à cibler les muscles que vous souhaitez travailler.</p>
-        <img src="../images/dbz-goku.gif" />
+        <img src="../images/dbz-goku.gif" alt="Goku charge son ki"/>
         <p>L'objectif est simple : simplifier la musculation et la rendre accessible à tous.<br>Nous avons soigneusement organisé chaque catégorie et mis toute notre pédagogie dans nos écrits afin de créer les tutoriels les plus pertinents et efficaces possibles.</p>
         <p>Voici les différentes parties : </p>
         <table>
