Update image paths for cardio equipment

--- a/casi'no limit/cardio.html
+++ b/casi'no limit/cardio.html
@@ -21,22 +21,22 @@
         </table>
         <h1>Skierg</h1>
         <p>Le skierg est un ergo (ergomètre) ( machine de cardio ) qui reprends le principe du ski ou vous devez poussez avec des battons pour avancer. Ici au skierg vous devez faire le mouvement le plus ample possible allez chercher le plus haut possible pour bien descendre en quart de squatt veuillez a garder votre dos droit et a gainné votre sangle abdominale pour rester bien fort. Petite astuce de pro : Aller chercher le plus haut possible et tirez en puissant calé votre respiration sur vos mouvement c'est a dire quand vous tirez vous expirez quand vous remontez vous inspirez et ainsi de suite. </p>
-        <img src="images/skierg.jpg"/>
+        <img src="../images/skierg.jpg" alt="Skierg"/>
         <ul>
             <li>Source : <a href="https://muscu-street-et-crossfit.fr/le-skierg/">muscu-street-et-crossfit-le-skierg</a></li>
         </ul>
         <h1>Rower</h1>
         <p>Le rower ou le rameur en français fait aussi partie de la famille des ergo ( machine de cardio ). Pour effectuer une bonne traction au rameur, il faut d’abord pousser fort avec les jambes en gardant le dos droit et gainé. Ensuite, une fois les jambes presque complètement tendues, il faut tirer avec les bras en ramenant la poignée vers le bas du ventre, jamais vers le menton. Lors du retour, la séquence est inversée : on tend d’abord les bras vers l’avant, puis on plie les jambes pour revenir en position initiale. Ce mouvement évite de forcer sur les genoux lorsque ceux-ci sont pliés tout en ramenant la poignée. Il est important de rester bien gainé durant tout l’exercice pour protéger le dos. Comme pour le Skierg, il faut synchroniser la respiration avec le mouvement : on expire en tirant la poignée vers soi (phase de puissance), et on inspire en revenant (phase de récupération). </p>
-        <img src="images/skierg.jpg"/>
+        <img src="../images/rower.jpg" alt="Rower"/>
         <ul>
             <li>Source : <a href="https://muscu-street-et-crossfit.fr/le-rameur/">muscu-street-et-crossfit-le-rameur</a></li>
         </ul>
         <h1>Bike erg</h1>
         <p>L'Bike erg fonctionne comme un vélo classique pousser bien fort sur la jambe qui descend et pensé a bien respirer ! </p>
-        <img src="images/bikeerg.jpg"/>
+        <img src="../images/bikeerg.jpg" alt="Bikeerg"/>
         <h1>Echobike</h1>
         <p>L'Echobike, ou Assault Bike, est l'un des ergo les plus cardio de cette liste. L'Echobike reprend le principe du vélo, mais ici nous ajoutons un mouvement au niveau des bras. Pour bien exécuter cet exercice, vous devez pousser fort sur une jambe et tirer fort sur le bras opposé en même temps pour développer davantage de force. Le réglage de la selle se fait à hauteur de hanche. Pour la respiration, pensez à bien expirer lorsque vous poussez avec les jambes et à inspirer lors du mouvement de retour. </p>
-        <img src="images/echobike.jpg"/>
+        <img src="../images/echobike.jpg" alt="Echobike"/>
         <ul>
             <li>Source : <a href="https://www.docteur-fitness.com/assault-air-bike/">docteur-fitness-assault-air-bike</a></li>
         </ul>
