--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -4,6 +4,15 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
+        <header class="header">
+            <div class="nav-container">
+                <a href="#" class="nav-link">ACCUEIL</a>
+                <div class="logo">
+                    <img src="logo.png" alt="Muski logo">
+                    <span>MUSKI</span>
+                </div>
+                <a href="#" class="nav-link">CONTACT</a>
+        </header>
         <table border = "1">
             <tr>
                 <td>Somaire</td>
