liens vers acceuil et contact dans buste.html init

--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -6,12 +6,12 @@
 	<body>
         <header class="header">
             <div class="nav-container">
-                <a href="#" class="nav-link">ACCUEIL</a>
+                <a href="acceuil.html" class="nav-link">ACCUEIL</a>
                 <div class="logo">
                     <img src="logo.png" alt="Muski logo">
                     <span>MUSKI</span>
                 </div>
-                <a href="#" class="nav-link">CONTACT</a>
+                <a href="contact.html" class="nav-link">CONTACT</a>
         </header>
         <table border = "1">
             <tr>
