css de l'accueil et du buste, et correction des chemins des images dans acceuil.html et buste.html.

--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -2,14 +2,14 @@
 <html lang="fr"><head>
 		<title>Buste</title>
 		<meta charset="utf-8">
+        <link rel="stylesheet" href="buste.css">
 	</head>
 	<body>
         <header class="header">
             <div class="nav-container">
                 <a href="#" class="nav-link">ACCUEIL</a>
                 <div class="logo">
-                    <img src="logo.png" alt="Muski logo">
-                    <span>MUSKI</span>
+                    <img src="../images/logo.png" alt="Muski logo">
                 </div>
                 <a href="#" class="nav-link">CONTACT</a>
         </header>
