--- a/MUSKI/acceuil.html
+++ b/MUSKI/acceuil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Muski</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="accueil.css">
 </head>
 
 <body>
@@ -11,7 +11,7 @@
 <header>
     <nav class="navbar">
         <a href="accueil.html">ACCUEIL</a>
-        <img src="images/logo.png" class="logo">
+        <img src="../images/logo.png" class="logo">
         <a href="contact.html">CONTACT</a>
     </nav>
 </header>
@@ -30,23 +30,23 @@
         <div class="cadre">
             
             <!-- Image de base -->
-            <img src="images/goku_base.png" class="base">
+            <img src="../images/goku.png" class="base">
 
             <!-- MUSCLES CLIQUABLES -->
             <a href="bras.html">
-                <img src="images/bras.png" class="muscle bras">
+                <img src="../images/bras.png" class="muscle bras">
             </a>
 
             <a href="jambes.html">
-                <img src="images/jambes.png" class="muscle jambes">
+                <img src="../images/jambes.png" class="muscle jambes">
             </a>
 
             <a href="dos.html">
-                <img src="images/dos.png" class="muscle dos">
+                <img src="../images/dos.png" class="muscle dos">
             </a>
 
             <a href="buste.html">
-                <img src="images/buste.png" class="muscle buste">
+                <img src="../images/buste.png" class="muscle buste">
             </a>
 
         </div>
