du gras sur buste.html

--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -28,13 +28,13 @@
             <div class="element-grille texte-droite">
                 <ul>
                     <li>
-                        **Stabilité posturale** : il maintient la colonne vertébrale droite et protège les organes internes.
+                        <strong>Stabilité posturale</strong> : il maintient la colonne vertébrale droite et protège les organes internes.
                     </li>
                     <li>
-                        **Mobilité** : il permet les mouvements de flexion, extension, rotation et inclinaison du buste.
+                        <strong>Mobilité</strong> : il permet les mouvements de flexion, extension, rotation et inclinaison du buste.
                     </li>
                     <li>
-                        **Transmission de puissance** : un buste solide facilite la coordination et l’efficacité des mouvements.
+                        <strong>Transmission de puissance</strong> : un buste solide facilite la coordination et l’efficacité des mouvements.
                     </li>
                 </ul>
             </div>
@@ -42,13 +42,13 @@
             <div class="element-grille texte-gauche">
                 <ul>
                     <li>
-                        **Grand droit de l’abdomen** — le muscles qui permet la formation du "six-pack".
+                        <strong>Grand droit de l’abdomen</strong> — le muscles qui permet la formation du "six-pack".
                     </li>
                     <li>
-                        **Transverse de l’abdomen** — muscle profond assurant le gainage et la stabilité. 
+                        <strong>Transverse de l’abdomen</strong> — muscle profond assurant le gainage et la stabilité. 
                     </li>
                     <li>
-                        **Obliques internes et externes** — permettent la rotation et l’inclinaison du buste. 
+                        <strong>Obliques internes et externes</strong> — permettent la rotation et l’inclinaison du buste. 
                     </li>
                 </ul>
             </div>
@@ -62,13 +62,13 @@
             <div class="element-grille texte-droite">
                 <ul>
                     <li>
-                        **Carré des lombes** — stabilise et participe à l’extension du buste.
+                        <strong>Carré des lombes</strong> — stabilise et participe à l’extension du buste.
                     </li>
                     <li>
-                        **Érecteurs du rachis** — essentiels pour le maintien postural.
+                        <strong>Érecteurs du rachis</strong> — essentiels pour le maintien postural.
                     </li>
                     <li>
-                        **Grand fessier** — contribue à la puissance du bas du corps.
+                        <strong>Grand fessier</strong> — contribue à la puissance du bas du corps.
                     </li>
                 </ul>
             </div>
