final ? de buste

--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -3,7 +3,7 @@
 <head>
     <title>Buste</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="buste.css">
+    <link rel="stylesheet" href="buste_noir.css">
 </head>
 <body>
     <header class="header">
@@ -112,7 +112,6 @@
                 <td>Améliorer la stabilité et la coordination</td>
             </tr>
         </table>
-        
         <div class="content-section section-texte-droite">
             <div class="illustration-colonne">
                 
