--- a/MUSKI/cardio.html
+++ b/MUSKI/cardio.html
@@ -3,7 +3,7 @@
 <head>
     <title>Cardio</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="buste.css">
+    <link rel="stylesheet" href="buste_noir.css">
 </head>
 <body>
     <header class="header">
