fixing en rapport avec w3c et je regarde la finale du major CS2 vive vitality

--- a/MUSKI/bras.html
+++ b/MUSKI/bras.html
@@ -50,7 +50,7 @@
                 <h3>Comment muscler ses triceps ?</h3>
                 <p>Pour les triceps, les exercices de poussée sont les plus efficaces.</p>
                 
-                <table class="wikitable exercices-table" border="1">
+                <table class="exercices-table">
                     <tr>
                         <td><strong>Exercice</strong></td>
                         <td><strong>Muscle sollicité</strong></td>
@@ -88,7 +88,7 @@
 
                 <h3>Comment muscler ses biceps ?</h3>
 
-                <table class="wikitable exercices-table" border="1">
+                <table class="exercices-table">
                     <tr>
                         <td><strong>Exercice</strong></td>
                         <td><strong>Muscle sollicité</strong></td>
