--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -78,7 +78,7 @@
         </div>
         
         <h2>Exercices pour renforcer le Buste</h2>
-        <table border="1" class="exercices-table">
+        <table class="exercices-table">
             <tr>
                 <td><strong>Exercice</strong></td>
                 <td><strong>Muscle sollicité</strong></td>
