--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -42,7 +42,7 @@
                 <h2>Anatomie des jambes</h2>
                 <p>Les jambes sont composées de plusieurs groupes musculaires :</p>
                 
-                <table class="wikitable exercices-table" border="1">
+                <table class="exercices-table">
                     <tr>
                         <th style="text-align:left;">Groupe musculaire</th>
                         <th>Localisation</th>
