--- a/MUSKI/epaules.html
+++ b/MUSKI/epaules.html
@@ -23,7 +23,7 @@
             </div>
             <div class="text-colonne">
                 <h1>Les Épaules</h1>
-                <p>Vos épaules se composent de 3 os principaux : la <strong></strong>clavicule</strong>, les <strong>omoplates</strong> (ou scapulas) et l’<strong>humérus</strong>. L’articulation de vos épaules se forme à l’endroit où l’humérus s’insère dans l’omoplate. Elle est d’ailleurs responsable de plusieurs actions (flexion, abduction, etc.).</p>
+                <p>Vos épaules se composent de 3 os principaux : la <strong>clavicule</strong>, les <strong>omoplates</strong> (ou scapulas) et l’<strong>humérus</strong>. L’articulation de vos épaules se forme à l’endroit où l’humérus s’insère dans l’omoplate. Elle est d’ailleurs responsable de plusieurs actions (flexion, abduction, etc.).</p>
                 <p>Comme il s’agit d’une articulation complexe, plusieurs groupes musculaires sont là pour la soutenir :</p>
                 <ul>
                     <li><strong>La coiffe des rotateurs</strong></li>
@@ -41,7 +41,7 @@
             <div class="text-colonne">
                 <h2>Comment muscler ses épaules ?</h2>
                 
-                <table class="wikitable exercices-table" border="1">
+                <table class="exercices-table">
                     <tr>
                         <td><strong>Exercice</strong></td>
                         <td><strong>Muscle sollicité</strong></td>
