--- a/MUSKI/bras.html
+++ b/MUSKI/bras.html
@@ -24,7 +24,7 @@
             <div class="text-colonne">
                 <h1>Les Bras</h1>
                 <p class="introduction">Le bras est la partie du corps la plus "connue" en musculation. Les muscles principaux qui le composent sont :</p>
-                <ul>
+                <ul>bjkb:lgjik:
                     <li><strong>Le triceps</strong></li> 
                     <li><strong>Le biceps</strong></li> 
                     <li><strong>Le brachial antérieur</strong></li>
