--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -20,6 +20,16 @@
 
         <div class="content-section section-texte-droite">
             <div class="illustration-colonne">
+                <img src="https://i1.sndcdn.com/artworks-fZCZuf1AwrqfKz4X-DyqInA-t500x500.jpg" alt="Illustration générale du Buste">
+            </div>
+            <div class="text-colonne">
+                <h1>Bienvenue aux abysses du pouvoir</h1>
+                <p class="introduction">Le <strong>buste</strong> désigne l’ensemble des muscles situés au centre du corps, englobant la région abdominale, lombaire, pelvienne et parfois thoracique. Il constitue la base de la stabilité, de la mobilité et de la transmission de la force entre le haut et le bas du corps.</p>
+            </div>
+        </div>
+
+        <div class="content-section section-texte-droite">
+            <div class="illustration-colonne">
                 <img src="placeholder-buste-intro.png" alt="Illustration générale du Buste">
             </div>
             <div class="text-colonne">
