--- a/MUSKI/cardio.html
+++ b/MUSKI/cardio.html
@@ -10,7 +10,7 @@
         <div class="nav-container">
             <a href="acceuil.html" class="nav-link">ACCUEIL</a>
             <div class="logo">
-                <img src="../images/logo.png" alt="Muski logo">
+                <img src="./images/logo.png" alt="Muski logo">
             </div>
             <a href="contact.html" class="nav-link">CONTACT</a>
         </div>
@@ -18,7 +18,7 @@
     <div class="page-content">
         <div class="content-section section-texte-droite">
             <div class="illustration-colonne">
-                <img src="../images/skierg.jpg" alt="Skierg">
+                <img src="./images/skierg.jpg" alt="Skierg">
             </div>
             <div class="text-colonne">
                 <h1>Skierg</h1>
@@ -32,7 +32,7 @@
 
         <div class="content-section section-texte-gauche">
             <div class="illustration-colonne">
-                <img src="../images/rower.jpg" alt="Rower (Rameur)">
+                <img src="./images/rower.jpg" alt="Rower (Rameur)">
             </div>
             <div class="text-colonne">
                 <h2>Rower (Rameur)</h2>
@@ -46,7 +46,7 @@
 
         <div class="content-section section-texte-droite">
             <div class="illustration-colonne">
-                <img src="../images/bikeerg.jpg" alt="Bike erg">
+                <img src="./images/bikeerg.jpg" alt="Bike erg">
             </div>
             <div class="text-colonne">
                 <h2>Bike Erg</h2>
@@ -56,7 +56,7 @@
 
         <div class="content-section section-texte-gauche">
             <div class="illustration-colonne">
-                <img src="../images/echobike.jpg" alt="Echobike / Assault Bike">
+                <img src="./images/echobike.jpg" alt="Echobike / Assault Bike">
             </div>
             <div class="text-colonne">
                 <h2>Echobike / Assault Bike</h2>
