ajout des meta descriptions

--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -3,6 +3,7 @@
 <head>
     <title>Buste</title>
     <meta charset="utf-8">
+    <meta name="description" content="Découvrez l'anatomie complète du buste (abdos, lombaires, fessiers) et leur rôle crucial dans la stabilité et la force. Trouvez les exercices clés pour le gainage.">
     <link rel="stylesheet" href="style_noir.css">
 </head>
 <body>
