--- a/MUSKI/cardio.html
+++ b/MUSKI/cardio.html
@@ -3,6 +3,7 @@
 <head>
     <title>Cardio</title>
     <meta charset="utf-8">
+    <meta name="description" content="Maîtrisez les machines de cardio ergométriques : Skierg, Rower, Bike Erg et Echobike. Guide détaillé des techniques et astuces de pro pour maximiser votre effort.">
     <link rel="stylesheet" href="style_noir.css">
 </head>
 <body>
