--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -3,6 +3,7 @@
 <head>
     <title>Jambes</title>
     <meta charset="utf-8">
+    <meta name="description" content="Guide essentiel pour le 'Leg Day' : Anatomie des jambes, principes de base (squat, soulevé de terre), erreurs courantes et conseils nutritionnels pour la récupération.">
     <link rel="stylesheet" href="style_noir.css">
 </head>
 <body>
