--- a/MUSKI/epaules.html
+++ b/MUSKI/epaules.html
@@ -22,7 +22,7 @@
                 <img src="https://i.pinimg.com/originals/07/10/1f/07101fbac4bba1cd3bb64a5c4771f0e8.png" alt="Schéma d'anatomie de l'épaule" style="border-radius: 8px;">
             </div>
             <div class="text-colonne">
-                <h1></h1>
+                <h1>Bienvenue dans la ville future !</h1>
                 <p>Concentration, puissance et détermination sont au cœur de cette séance inspirée de la forme Super Saiyan de Trunks. L’objectif est de renforcer les épaules afin de gagner en largeur, en stabilité et en explosivité. Chaque exercice vise à construire un haut du corps solide et équilibré, capable d’encaisser comme d’attaquer. À l’image de Super Trunks, cet entraînement demande discipline et engagement total pour développer une force impressionnante.</p>
             </div>
         </div>
