pleins de choses biens

--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -30,9 +30,6 @@
         </div>
 
         <div class="content-section section-texte-droite">
-            <div class="illustration-colonne">
-                <img src="placeholder-buste-intro.png" alt="Illustration générale du Buste">
-            </div>
             <div class="text-colonne">
                 <h1>Buste</h1>
                 <p class="introduction">Le <strong>buste</strong> désigne l’ensemble des muscles situés au centre du corps, englobant la région abdominale, lombaire, pelvienne et parfois thoracique. Il constitue la base de la stabilité, de la mobilité et de la transmission de la force entre le haut et le bas du corps.</p>
@@ -40,10 +37,6 @@
         </div>
 
         <div class="content-section section-texte-gauche">
-            <div class="illustration-colonne">
-                
-                <img src="placeholder-role-buste.png" alt="Illustration du Rôle du Buste">
-            </div>
             <div class="text-colonne">
                 <h2>Rôle du Buste</h2>
                 <p>Le buste assure plusieurs fonctions essentielles :</p>
@@ -56,9 +49,9 @@
             </div>
         </div>
 
-        <div class="content-section section-texte-droite">
+        <div class="content-section section-texte-gauche">
             <div class="illustration-colonne">
-                <img src="placeholder-muscles-complex.png" alt="Schéma des groupes musculaires du buste">
+                <img src="https://static.wikia.nocookie.net/character-level/images/f/f5/Broly_legendary_ssj_by_andrewdragonball_dctctj9-pre.png/revision/latest/scale-to-width-down/350?cb=20200112042805" alt="Schéma des groupes musculaires du buste">
             </div>
             <div class="text-colonne">
                 <h2>Protection et Groupes Musculaires</h2>
@@ -122,10 +115,6 @@
             </tr>
         </table>
         <div class="content-section section-texte-gauche">
-            <div class="illustration-colonne">
-                
-                <img src="placeholder-posture.png" alt="Illustration d'une bonne posture">
-            </div>
             <div class="text-colonne">
                 <h2>Importance d'un Buste Fort</h2>
                 <p>Un buste renforcé améliore :</p>
