--- a/MUSKI/epaules.html
+++ b/MUSKI/epaules.html
@@ -44,7 +44,7 @@
 
         <div class="content-section section-texte-gauche">
             <div class="illustration-colonne">
-                <img src="placeholder-overhead-press.png" alt="Illustration des exercices pour les épaules" style="border-radius: 8px;">
+                <img src="https://static.wikia.nocookie.net/perfect-power-level-list/images/5/5f/SS_Grade_2_Future_Trunks.png/revision/latest?cb=20190215170108" alt="Illustration des exercices pour les épaules" style="border-radius: 8px;">
             </div>
             <div class="text-colonne">
                 <h2>Comment muscler ses épaules ?</h2>
