--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -36,6 +36,10 @@
             <a href="bras.html">
                 <img src="./images/bras.png" class="muscle bras">
             </a>
+            
+            <a href="epaules.html">
+                <img src="./images/épaules0.png" class="muscle epaules">
+            </a>
 
             <a href="jambes.html">
                 <img src="./images/jambes.png" class="muscle jambes">
@@ -47,6 +51,10 @@
 
             <a href="buste.html">
                 <img src="./images/buste.png" class="muscle buste">
+            </a>
+
+            <a href="cardio.html">
+                <img src="./images/cardios.png" class="muscle cardio">
             </a>
 
         </div>
