--- a/MUSKI/bras.html
+++ b/MUSKI/bras.html
@@ -3,7 +3,7 @@
 <head>
     <title>Bras</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style_noir.css">
+    <link rel="stylesheet" href="./styles/style_noir.css">
 </head>
 <body>
     <header class="header">
