--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -4,7 +4,7 @@
     <title>Buste</title>
     <meta charset="utf-8">
     <meta name="description" content="Découvrez l'anatomie complète du buste (abdos, lombaires, fessiers) et leur rôle crucial dans la stabilité et la force. Trouvez les exercices clés pour le gainage.">
-    <link rel="stylesheet" href="style_noir.css">
+    <link rel="stylesheet" href="./styles/style_noir.css">
 </head>
 <body>
     <header class="header">
