--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Muski</title>
-    <link rel="stylesheet" href="accueil.css">
+    <link rel="stylesheet" href="./styles/accueil.css">
 </head>
 
 <body>
