--- a/MUSKI/cardio.html
+++ b/MUSKI/cardio.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="nav-container">
-            <a href="acceuil.html" class="nav-link">ACCUEIL</a>
+            <a href="index.html" class="nav-link">ACCUEIL</a>
             <div class="logo">
                 <img src="./images/logo.png" alt="Muski logo">
             </div>
