--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="nav-container">
-            <a href="acceuil.html" class="nav-link">ACCUEIL</a>
+            <a href="index.html" class="nav-link">ACCUEIL</a>
             <div class="logo">
                 <img src="./images/logo.png" alt="Muski logo">
             </div>
@@ -154,5 +154,14 @@
             <li><a href="https://www.strengthlog.com/">StrengthLog</a> – Programmes et explications d’exercices validés par des coachs certifiés NSCA.</li>
         </ul>
     </div>
+    <footer class="footer">
+        <div class="nav-container">
+            <a href="acceuil.html" class="nav-link">ACCUEIL</a>
+            <div class="logo">
+                <img src="./images/logo.png" alt="Muski logo">
+            </div>
+            <a href="contact.html" class="nav-link">CONTACT</a>
+        </div>
+    </footer>
 </body>
 </html>
