--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -155,12 +155,39 @@
         </ul>
     </div>
     <footer class="footer">
-        <div class="nav-container">
-            <a href="acceuil.html" class="nav-link">ACCUEIL</a>
-            <div class="logo">
-                <img src="./images/logo.png" alt="Muski logo">
+        <div class="footer-container">        
+            <div class="footer-colonne footer-branding">
+                <div class="footer-logo">MUSKI</div>
+                <p class="copyright">@2025</p>
+                <p><a href="privacy.html" class="footer-link">Privacy Terms - (lien)</a></p>
             </div>
-            <a href="contact.html" class="nav-link">CONTACT</a>
+
+            <div class="footer-colonne">
+                <h3>Entraînements</h3>
+                <ul>
+                    <li><a href="bras.html" class="footer-link">Les Bras</a></li>
+                    <li><a href="jambes.html" class="footer-link">Les Jambes</a></li>
+                    <li><a href="epaules.html" class="footer-link">Les Épaules</a></li>
+                    <li><a href="dos.html" class="footer-link">Le Dos</a></li>
+                    <li><a href="cardio.html" class="footer-link">Le Cardio</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-colonne">
+                <h3>Fondateurs</h3>
+                <ul>
+                    <li>Kenzi Yacini</li>
+                    <li>Milann Becher'ini</li>
+                    <li>Rafael Barny</li>
+                </ul>
+            </div>
+
+            <div class="footer-colonne">
+                <h3>Sécurité</h3>
+                <ul>
+                    <li>Responsabilité</li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
