--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -156,12 +156,11 @@
     </div>
     <footer class="footer">
         <div class="footer-container">        
-            <div class="footer-colonne footer-branding">
-                <div class="footer-logo">MUSKI</div>
-                <p class="copyright">@2025</p>
-                <p><a href="privacy.html" class="footer-link">Privacy Terms - (lien)</a></p>
+            <div class="footer-colonne">
+                <p>MUSKI</p>
+                <p>@2025</p>
+                <p>Privacy Terms</p>
             </div>
-
             <div class="footer-colonne">
                 <h3>Entraînements</h3>
                 <ul>
@@ -172,16 +171,14 @@
                     <li><a href="cardio.html" class="footer-link">Le Cardio</a></li>
                 </ul>
             </div>
-
             <div class="footer-colonne">
                 <h3>Fondateurs</h3>
                 <ul>
                     <li>Kenzi Yacini</li>
-                    <li>Milann Becher'ini</li>
+                    <li>Milann Becherini</li>
                     <li>Rafael Barny</li>
                 </ul>
             </div>
-
             <div class="footer-colonne">
                 <h3>Sécurité</h3>
                 <ul>
