bouton javaqcript changement de style + changement des commentaires

--- a/MUSKI/buste.html
+++ b/MUSKI/buste.html
@@ -4,7 +4,7 @@
     <title>Buste</title>
     <meta charset="utf-8">
     <meta name="description" content="Découvrez l'anatomie complète du buste (abdos, lombaires, fessiers) et leur rôle crucial dans la stabilité et la force. Trouvez les exercices clés pour le gainage.">
-    <link rel="stylesheet" href="./styles/style_noir.css">
+    <link id="theme" rel="stylesheet" href="styles/style_noir.css">
 </head>
 <body>
     <header class="header">
@@ -15,6 +15,7 @@
             </div>
             <a href="contact.html" class="nav-link">CONTACT</a>
         </div>
+        <button onclick="changerStyle()">Changer le style</button>
     </header>
 
     <div class="page-content">
@@ -130,5 +131,7 @@
         <h2>Références</h2>
         <p>Move Your Fit : Créateur de contenu expliquant très clairement sur les postures et le renforcement du buste.</p>
 
-    </div> </body>
+    </div>
+<script src="bouton.js"></script>
+</body>
 </html>
