--- a/MUSKI/bras.html
+++ b/MUSKI/bras.html
@@ -3,7 +3,7 @@
 <head>
     <title>Bras</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./styles/style_noir.css">
+    <link id="theme" rel="stylesheet" href="styles/style_noir.css">
 </head>
 <body>
     <header class="header">
@@ -14,6 +14,7 @@
             </div>
             <a href="contact.html" class="nav-link">CONTACT</a>
         </div>
+        <button onclick="changerStyle()">Changer le style</button>
     </header>
 
     <div class="page-content">
@@ -122,5 +123,6 @@
             </div>
         </div>
     </div>
+    <script src="bouton.js"></script>
 </body>
 </html>
