--- a/MUSKI/cardio.html
+++ b/MUSKI/cardio.html
@@ -4,7 +4,7 @@
     <title>Cardio</title>
     <meta charset="utf-8">
     <meta name="description" content="Maîtrisez les machines de cardio ergométriques : Skierg, Rower, Bike Erg et Echobike. Guide détaillé des techniques et astuces de pro pour maximiser votre effort.">
-    <link rel="stylesheet" href="./styles/style_noir.css">
+    <link id="theme" rel="stylesheet" href="styles/style_noir.css">
 </head>
 <body>
     <header class="header">
@@ -15,6 +15,7 @@
             </div>
             <a href="contact.html" class="nav-link">CONTACT</a>
         </div>
+        <button onclick="changerStyle()">Changer le style</button>
     </header>
     <div class="page-content">
         <div class="content-section section-texte-droite">
@@ -77,5 +78,6 @@
         </div>
 
     </div>
+<script src="bouton.js"></script>
 </body>
 </html>
