--- a/MUSKI/epaules.html
+++ b/MUSKI/epaules.html
@@ -4,7 +4,7 @@
     <title>Épaules</title>
     <meta charset="utf-8">
     <meta name="description" content="Tout savoir sur l'anatomie des épaules (deltoïdes, coiffe des rotateurs, trapèzes). Découvrez les meilleurs exercices pour la stabilité, la force et un physique harmonieux.">
-    <link rel="stylesheet" href="./styles/style_noir.css">
+    <link id="theme" rel="stylesheet" href="styles/style_noir.css">
 </head>
 <body>
     <header class="header">
@@ -15,6 +15,7 @@
             </div>
             <a href="contact.html" class="nav-link">CONTACT</a>
         </div>
+        <button onclick="changerStyle()">Changer le style</button>
     </header>
 
     <div class="page-content">
@@ -75,5 +76,6 @@
         </div>
 
     </div>
+<script src="bouton.js"></script>
 </body>
 </html>
