--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -13,6 +13,7 @@
         <a href="accueil.html">ACCUEIL</a>
         <img src="./images/logo.png" class="logo">
         <a href="contact.html">CONTACT</a>
+        <button onclick="changerStyle()">Changer le style</button>
     </nav>
 </header>
 
@@ -61,6 +62,6 @@
 <footer>
     <p>© 2025 MUSKI – Tous droits réservés</p>
 </footer>
-
+<script src="bouton.js"></script>
 </body>
-</html>a 
+</html>
