--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -4,7 +4,7 @@
     <title>Jambes</title>
     <meta charset="utf-8">
     <meta name="description" content="Guide essentiel pour le 'Leg Day' : Anatomie des jambes, principes de base (squat, soulevé de terre), erreurs courantes et conseils nutritionnels pour la récupération.">
-    <link rel="stylesheet" href="./styles/style_noir.css">
+    <link id="theme" rel="stylesheet" href="styles/style_noir.css">
 </head>
 <body>
     <header class="header">
@@ -14,6 +14,7 @@
                 <img src="./images/logo.png" alt="Muski logo">
             </div>
             <a href="contact.html" class="nav-link">CONTACT</a>
+            <button onclick="changerStyle()">Changer le style</button>
         </div>
     </header>
 
@@ -163,5 +164,6 @@
             <a href="contact.html" class="nav-link">CONTACT</a>
         </div>
     </footer>
+    <script src="bouton.js"></script>
 </body>
 </html>
