--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -154,14 +154,14 @@
             <li><a href="https://www.strengthlog.com/">StrengthLog</a> – Programmes et explications d’exercices validés par des coachs certifiés NSCA.</li>
         </ul>
     </div>
-    <footer class="footer">
-        <div class="footer-container">        
-            <div class="footer-colonne">
+    <footer class="header">
+        <div class=".content-section">        
+            <div class="text-colonne">
                 <p>MUSKI</p>
                 <p>@2025</p>
                 <p>Privacy Terms</p>
             </div>
-            <div class="footer-colonne">
+            <div class="text-colonne">
                 <h3>Entraînements</h3>
                 <ul>
                     <li><a href="bras.html" class="footer-link">Les Bras</a></li>
@@ -171,7 +171,7 @@
                     <li><a href="cardio.html" class="footer-link">Le Cardio</a></li>
                 </ul>
             </div>
-            <div class="footer-colonne">
+            <div class="text-colonne">
                 <h3>Fondateurs</h3>
                 <ul>
                     <li>Kenzi Yacini</li>
@@ -179,7 +179,7 @@
                     <li>Rafael Barny</li>
                 </ul>
             </div>
-            <div class="footer-colonne">
+            <div class="text-colonne">
                 <h3>Sécurité</h3>
                 <ul>
                     <li>Responsabilité</li>
