--- a/MUSKI/epaules.html
+++ b/MUSKI/epaules.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Tout savoir sur l'anatomie des épaules (deltoïdes, coiffe des rotateurs, trapèzes). Découvrez les meilleurs exercices pour la stabilité, la force et un physique harmonieux.">
     <link id="theme" rel="stylesheet" href="styles/style_noir.css">
+    <script src="bouton.js"></script>
 </head>
 <body>
     <header class="header">
@@ -76,6 +77,43 @@
         </div>
 
     </div>
-<script src="bouton.js"></script>
+    <footer class="header">
+        <div class="footer-content-section">        
+            <div class="text-colonne">
+                <p>MUSKI</p>
+                <p>@2025</p>
+                <p>Privacy Terms</p>
+            </div>
+            <div class="text-colonne">
+                <h3>Entraînements</h3>
+                <ul>
+                    <li><a href="bras.html" class="footer-link">Les Bras</a></li>
+                    <li><a href="jambes.html" class="footer-link">Les Jambes</a></li>
+                    <li><a href="epaules.html" class="footer-link">Les Épaules</a></li>
+                    <li><a href="dos.html" class="footer-link">Le Dos</a></li>
+                    <li><a href="cardio.html" class="footer-link">Le Cardio</a></li>
+                </ul>
+            </div>
+            <div class="text-colonne">
+                <h3>Fondateurs</h3>
+                <ul>
+                    <li>Kenzi Yacini</li>
+                    <li>Milann Becherini</li>
+                    <li>Rafael Barny</li>
+                </ul>
+            </div>
+            <div class="text-colonne">
+                <h3>Sécurité</h3>
+                <ul>
+                    <li>Responsabilité</li>
+                </ul>
+            </div>
+            <div class="text-colonne">
+                <h3>Fonctionnalités</h3>
+                <p><a href="#top" title="Revenir en haut de page">Revenir en haut</a></p>
+                <p><button onclick="changerStyle()">Changer le style</button></p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
