--- a/MUSKI/jambes.html
+++ b/MUSKI/jambes.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Guide essentiel pour le 'Leg Day' : Anatomie des jambes, principes de base (squat, soulevé de terre), erreurs courantes et conseils nutritionnels pour la récupération.">
     <link id="theme" rel="stylesheet" href="styles/style_noir.css">
+    <script src="bouton.js"></script>
 </head>
 <body>
     <header class="header">
@@ -14,7 +15,6 @@
                 <img src="./images/logo.png" alt="Muski logo">
             </div>
             <a href="contact.html" class="nav-link">CONTACT</a>
-            <button onclick="changerStyle()">Changer le style</button>
         </div>
     </header>
 
@@ -32,7 +32,7 @@
 
         <div class="content-section section-texte-droite">
             <div class="text-colonne">
-                <h1>Les Jambes</h1>
+                <h2>Les Jambes</h2>
                 <p>Muscler les jambes est essentiel pour :</p>
                 <ul>
                     <li>Améliorer la <strong>force globale</strong> du corps</li>
@@ -156,7 +156,7 @@
         </ul>
     </div>
     <footer class="header">
-        <div class=".content-section">        
+        <div class="footer-content-section">        
             <div class="text-colonne">
                 <p>MUSKI</p>
                 <p>@2025</p>
@@ -186,8 +186,12 @@
                     <li>Responsabilité</li>
                 </ul>
             </div>
+            <div class="text-colonne">
+                <h3>Fonctionnalités</h3>
+                <p><a href="#top" title="Revenir en haut de page">Revenir en haut</a></p>
+                <p><button onclick="changerStyle()">Changer le style</button></p>
+            </div>
         </div>
     </footer>
-    <script src="bouton.js"></script>
 </body>
 </html>
