--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -8,12 +8,11 @@
 
 <body>
 
-<header>
+<header class="header">
     <nav class="navbar">
         <a href="accueil.html">ACCUEIL</a>
         <img src="./images/logo.png" class="logo">
         <a href="contact.html">CONTACT</a>
-        <button onclick="changerStyle()">Changer le style</button>
     </nav>
 </header>
 
@@ -59,9 +58,44 @@
 
 </main>
 
-<footer>
-    <p>© 2025 MUSKI – Tous droits réservés</p>
-</footer>
-<script src="bouton.js"></script>
+<footer class="header">
+        <div class="footer-content-section">        
+            <div class="text-colonne">
+                <p>MUSKI</p>
+                <p>@2025</p>
+                <p>Privacy Terms</p>
+            </div>
+            <div class="text-colonne">
+                <h3>Entraînements</h3>
+                <ul>
+                    <li><a href="bras.html" class="footer-link">Les Bras</a></li>
+                    <li><a href="jambes.html" class="footer-link">Les Jambes</a></li>
+                    <li><a href="epaules.html" class="footer-link">Les Épaules</a></li>
+                    <li><a href="dos.html" class="footer-link">Le Dos</a></li>
+                    <li><a href="cardio.html" class="footer-link">Le Cardio</a></li>
+                </ul>
+            </div>
+            <div class="text-colonne">
+                <h3>Fondateurs</h3>
+                <ul>
+                    <li>Kenzi Yacini</li>
+                    <li>Milann Becherini</li>
+                    <li>Rafael Barny</li>
+                </ul>
+            </div>
+            <div class="text-colonne">
+                <h3>Sécurité</h3>
+                <ul>
+                    <li>Responsabilité</li>
+                </ul>
+            </div>
+            <div class="text-colonne">
+                <h3>Fonctionnalités</h3>
+                <p><a href="#top" class="footer-link" title="Revenir en haut de page">Revenir en haut</a></p>
+                <p><button onclick="changerStyle()">Changer le style</button></p>
+            </div>
+        </div>
+    </footer>
+    <script src="bouton_accueil.js"></script>
 </body>
 </html>
