lien vers index réparé

--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -10,7 +10,7 @@
 
 <header class="header">
     <nav class="navbar">
-        <a href="accueil.html">ACCUEIL</a>
+        <a href="index.html">ACCUEIL</a>
         <img src="./images/logo.png" class="logo">
         <a href="contact.html">CONTACT</a>
     </nav>
