--- a/MUSKI/contact.html
+++ b/MUSKI/contact.html
@@ -12,7 +12,7 @@
 
     <header class="header">
         <div class="nav-container">
-            <a href="accueil.html" class="nav-link">ACCUEIL</a>
+            <a href="index.html" class="nav-link">ACCUEIL</a>
             <div class="logo">
                 <img src="./images/logo.png" alt="Muski logo">
             </div>
