changement de thème et fusion des thèmes et des js

--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Muski</title>
-    <link id="theme" rel="stylesheet" href="./styles/accueil.css">
+    <link rel="stylesheet" href="styles/accueil.css">
+    <script src="js/bouton_accueil.js" defer></script>
 </head>
 
 <body>
@@ -91,10 +92,9 @@
             <div class="text-colonne">
                 <h3>Fonctionnalités</h3>
                 <p><a href="#top" class="footer-link" title="Revenir en haut de page">Revenir en haut</a></p>
-                <p><button onclick="changerStyle()">Changer le style</button></p>
+                <p><button id="toggle-theme">Changer de thème</button></p>
             </div>
         </div>
     </footer>
-    <script src="bouton_accueil.js"></script>
 </body>
 </html>
