--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Muski</title>
     <link rel="stylesheet" href="styles/accueil.css">
-    <script src="js/bouton_accueil.js" defer></script>
+    <script src="js/bouton.js" defer></script>
 </head>
 
 <body>
