--- a/MUSKI/bras.html
+++ b/MUSKI/bras.html
@@ -3,9 +3,9 @@
 <head>
     <title>Bras</title>
     <meta charset="utf-8">
-    <link id="theme" rel="stylesheet" href="styles/style_noir.css">
     <meta name="description" content="Guide complet pour muscler les bras. Anatomie des triceps (longue portion, vaste externe) et des biceps. Conseils et tableaux d'exercices pour le volume et la force.">
-    <script src="bouton.js"></script>
+    <link rel="stylesheet" href="styles/style_noir.css">
+    <script src="js/bouton.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -158,7 +158,7 @@
             <div class="text-colonne">
                 <h3>Fonctionnalités</h3>
                 <p><a href="#top" class="footer-link" title="Revenir en haut de page">Revenir en haut</a></p>
-                <p><button onclick="changerStyle()">Changer le style</button></p>
+                <p><button id="toggle-theme">Changer de thème</button></p>
             </div>
         </div>
     </footer>
