--- a/MUSKI/contact.html
+++ b/MUSKI/contact.html
@@ -50,7 +50,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <input type="submit" value="Envoyer le message" class="submit-button">
+                        <input type="submit" value="Envoyer le message" class="button">
                     </div>
                 </form>
             </div>            
@@ -91,7 +91,7 @@
             <div class="text-colonne">
                 <h3>Fonctionnalités</h3>
                 <p><a href="#top" class="footer-link" title="Revenir en haut de page">Revenir en haut</a></p>
-                <p><button onclick="changerStyle()">Changer le style</button></p>
+                <p><button id="toggle-theme" class="button">Changer de thème</button></p>
             </div>
         </div>
     </footer>
