--- a/MUSKI/index.html
+++ b/MUSKI/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Muski</title>
+    <meta name="description" content="Muski : Le wiki interactif des meilleurs exercices de musculation. Cliquez sur le muscle que vous voulez cibler (bras, épaules, jambes, buste) pour des entraînements efficaces.">
     <link rel="stylesheet" href="styles/accueil.css">
     <script src="js/bouton.js" defer></script>
 </head>
@@ -92,7 +93,7 @@
             <div class="text-colonne">
                 <h3>Fonctionnalités</h3>
                 <p><a href="#top" class="footer-link" title="Revenir en haut de page">Revenir en haut</a></p>
-                <p><button id="toggle-theme">Changer de thème</button></p>
+                <p><button id="toggle-theme" class="button">Changer de thème</button></p>
             </div>
         </div>
     </footer>
